<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.xebia</groupId>
	<artifactId>ejbcontainer</artifactId>
	<packaging>ejb</packaging>
	<version>1.0</version>
	<name>EJBContainer</name>
	<url>http://www.xebia.fr/</url>

	<profiles>

		<profile>
			<id>glassfish</id>
			<build>
				<resources>
					<resource>
						<targetPath>META-INF</targetPath>
						<directory>${basedir}/src/conf/glassfish/META-INF</directory>
					</resource>
				</resources>
			</build>
			<dependencies>
				<dependency>
					<groupId>org.glassfish</groupId>
					<artifactId>javax.ejb</artifactId>
					<version>3.1-b37</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.glassfish.extras</groupId>
					<artifactId>glassfish-embedded-all</artifactId>
					<version>3.1-b37</version>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.eclipse.persistence</groupId>
					<artifactId>eclipselink</artifactId>
					<version>2.0.1</version>
					<scope>provided</scope>
				</dependency>
			</dependencies>
		</profile>

		<profile>
			<id>jboss</id>
			<build>
				<resources>
					<resource>
						<targetPath>META-INF</targetPath>
						<directory>${basedir}/src/conf/jboss/META-INF</directory>
					</resource>
				</resources>
				<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.7.1</version>
					<configuration>
						<argLine>${surefire.jvm.args}</argLine>
					</configuration>
				</plugin>
				</plugins>
			</build>
			<properties>
				<jboss.home>/Users/juliensmadja/Desktop/jboss-6.0.0.Final</jboss.home>
				<test.jvm.arguments>-Xms128m -Xmx512m -XX:MaxPermSize=256m
					-Dorg.jboss.resolver.warning=true
					-Dsun.rmi.dgc.client.gcInterval=3600000
					-Dsun.rmi.dgc.server.gcInterval=3600000 -Dprogram.name=run.sh
					-Djava.library.path=/Users/juliensmadja/Desktop/jboss-6.0.0.Final/bin/native/lib64
					-Djava.endorsed.dirs=/Users/juliensmadja/Desktop/jboss-6.0.0.Final/lib/endorsed </test.jvm.arguments>
				<!-- the sufire.jvm.args can be overridden my specific profiles -->
				<surefire.jvm.args>${test.jvm.arguments}</surefire.jvm.args>
			</properties>
			<dependencies>
				<dependency>
					<groupId>org.jboss.ejb3.embedded</groupId>
					<artifactId>jboss-ejb3-embedded-standalone</artifactId>
					<version>1.0.0-alpha-2</version>
				</dependency>
				<dependency>
					<groupId>org.hibernate</groupId>
					<artifactId>hibernate-core</artifactId>
					<version>3.5.5-Final</version>
				</dependency>
				<dependency>
					<groupId>org.hibernate</groupId>
					<artifactId>hibernate-entitymanager</artifactId>
					<version>3.5.5-Final</version>
					<exclusions>
						<exclusion>
							<groupId>cglib</groupId>
							<artifactId>cglib</artifactId>
						</exclusion>
						<exclusion>
							<groupId>dom4j</groupId>
							<artifactId>dom4j</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>org.hibernate.javax.persistence</groupId>
					<artifactId>hibernate-jpa-2.0-api</artifactId>
					<version>1.0.0.Final</version>
				</dependency>
				<dependency>
					<groupId>org.hibernate</groupId>
					<artifactId>hibernate-validator</artifactId>
					<version>4.1.0.Final</version>
					<exclusions>
						<exclusion>
							<groupId>javax.xml.bind</groupId>
							<artifactId>jaxb-api</artifactId>
						</exclusion>
						<exclusion>
							<groupId>com.sun.xml.bind</groupId>
							<artifactId>jaxb-impl</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
					<version>1.6.1</version>
				</dependency>
			</dependencies>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>org.eclipse.persistence</groupId>
			<artifactId>javax.persistence</artifactId>
			<version>2.0.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.7</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<repositories>
		<repository>
			<id>jboss</id>
			<name>JBoss Repository</name>
			<url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
		</repository>
		<repository>
			<id>java.net</id>
			<name>Java.net Repository</name>
			<url>http://download.java.net/maven/glassfish</url>
		</repository>
	</repositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
